Fix entity-navigation z-index

--- a/src/main/frontend/src/styles/style.less
+++ b/src/main/frontend/src/styles/style.less
@@ -18,7 +18,7 @@
   margin: 0 0 2px 0 !important;
   padding: 2px;
   box-shadow: rgba(0, 0, 0, 0.4) 0 1px 6px, rgba(0, 0, 0, 0.117647) 0 1px 4px;
-  z-index: 1000000;
+  z-index: 100;
 
   .entity-nav-dropdown {
     background: lighten(@light-blue, 5%);
